native/crates/bongocat-live2d/src/sys/windows.rs

/* automatically generated by rust-bindgen 0.72.1 */

pub type csmVersion = ::core::ffi::c_uint;
pub type _bindgen_ty_1 = ::core::ffi::c_int;
pub type _bindgen_ty_2 = ::core::ffi::c_int;
pub type _bindgen_ty_3 = ::core::ffi::c_int;
pub type csmFlags = ::core::ffi::c_uchar;
pub type _bindgen_ty_4 = ::core::ffi::c_int;
pub type csmMocVersion = ::core::ffi::c_uint;
pub type _bindgen_ty_5 = ::core::ffi::c_int;
pub type _bindgen_ty_6 = ::core::ffi::c_int;
pub type _bindgen_ty_7 = ::core::ffi::c_int;
pub type csmParameterType = ::core::ffi::c_int;
pub type csmLogFunction = ::core::option::Option<
    unsafe extern "C" fn(message: *const ::core::ffi::c_char),
>;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct csmMoc {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct csmModel {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct csmVector2 {
    pub X: f32,
    pub Y: f32,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct csmVector4 {
    pub X: f32,
    pub Y: f32,
    pub Z: f32,
    pub W: f32,
}
pub const csmAlignofMoc: _bindgen_ty_1 = 64;
pub const csmAlignofModel: _bindgen_ty_1 = 16;
pub const csmBlendAdditive: _bindgen_ty_2 = 1;
pub const csmBlendMultiplicative: _bindgen_ty_2 = 2;
pub const csmIsDoubleSided: _bindgen_ty_2 = 4;
pub const csmIsInvertedMask: _bindgen_ty_2 = 8;
pub const csmIsVisible: _bindgen_ty_3 = 1;
pub const csmVisibilityDidChange: _bindgen_ty_3 = 2;
pub const csmOpacityDidChange: _bindgen_ty_3 = 4;
pub const csmDrawOrderDidChange: _bindgen_ty_3 = 8;
pub const csmRenderOrderDidChange: _bindgen_ty_3 = 16;
pub const csmVertexPositionsDidChange: _bindgen_ty_3 = 32;
pub const csmBlendColorDidChange: _bindgen_ty_3 = 64;
pub const csmMocVersion_Unknown: _bindgen_ty_4 = 0;
pub const csmMocVersion_30: _bindgen_ty_4 = 1;
pub const csmMocVersion_33: _bindgen_ty_4 = 2;
pub const csmMocVersion_40: _bindgen_ty_4 = 3;
pub const csmMocVersion_42: _bindgen_ty_4 = 4;
pub const csmMocVersion_50: _bindgen_ty_4 = 5;
pub const csmMocVersion_53: _bindgen_ty_4 = 6;
pub const csmParameterType_Normal: _bindgen_ty_5 = 0;
pub const csmParameterType_BlendShape: _bindgen_ty_5 = 1;
pub const csmColorBlendType_Normal: _bindgen_ty_6 = 0;
pub const csmColorBlendType_Add: _bindgen_ty_6 = 3;
pub const csmColorBlendType_AddGlow: _bindgen_ty_6 = 4;
pub const csmColorBlendType_Darken: _bindgen_ty_6 = 5;
pub const csmColorBlendType_Multiply: _bindgen_ty_6 = 6;
pub const csmColorBlendType_ColorBurn: _bindgen_ty_6 = 7;
pub const csmColorBlendType_LinearBurn: _bindgen_ty_6 = 8;
pub const csmColorBlendType_Lighten: _bindgen_ty_6 = 9;
pub const csmColorBlendType_Screen: _bindgen_ty_6 = 10;
pub const csmColorBlendType_ColorDodge: _bindgen_ty_6 = 11;
pub const csmColorBlendType_Overlay: _bindgen_ty_6 = 12;
pub const csmColorBlendType_SoftLight: _bindgen_ty_6 = 13;
pub const csmColorBlendType_HardLight: _bindgen_ty_6 = 14;
pub const csmColorBlendType_LinearLight: _bindgen_ty_6 = 15;
pub const csmColorBlendType_Hue: _bindgen_ty_6 = 16;
pub const csmColorBlendType_Color: _bindgen_ty_6 = 17;
pub const csmColorBlendType_AddCompatible: _bindgen_ty_6 = 1;
pub const csmColorBlendType_MultiplyCompatible: _bindgen_ty_6 = 2;
pub const csmAlphaBlendType_Over: _bindgen_ty_7 = 0;
pub const csmAlphaBlendType_Atop: _bindgen_ty_7 = 1;
pub const csmAlphaBlendType_Out: _bindgen_ty_7 = 2;
pub const csmAlphaBlendType_ConjointOver: _bindgen_ty_7 = 3;
pub const csmAlphaBlendType_DisjointOver: _bindgen_ty_7 = 4;
unsafe extern "C" {
    pub fn csmGetVersion() -> csmVersion;
    pub fn csmGetLatestMocVersion() -> csmMocVersion;
    pub fn csmGetMocVersion(
        address: *const ::core::ffi::c_void,
        size: ::core::ffi::c_uint,
    ) -> csmMocVersion;
    pub fn csmHasMocConsistency(
        address: *mut ::core::ffi::c_void,
        size: ::core::ffi::c_uint,
    ) -> ::core::ffi::c_int;
    pub fn csmGetLogFunction() -> csmLogFunction;
    pub fn csmSetLogFunction(handler: csmLogFunction);
    pub fn csmReviveMocInPlace(
        address: *mut ::core::ffi::c_void,
        size: ::core::ffi::c_uint,
    ) -> *mut csmMoc;
    pub fn csmGetSizeofModel(moc: *const csmMoc) -> ::core::ffi::c_uint;
    pub fn csmInitializeModelInPlace(
        moc: *const csmMoc,
        address: *mut ::core::ffi::c_void,
        size: ::core::ffi::c_uint,
    ) -> *mut csmModel;
    pub fn csmUpdateModel(model: *mut csmModel);
    pub fn csmGetRenderOrders(model: *const csmModel) -> *const ::core::ffi::c_int;
    pub fn csmReadCanvasInfo(
        model: *const csmModel,
        outSizeInPixels: *mut csmVector2,
        outOriginInPixels: *mut csmVector2,
        outPixelsPerUnit: *mut f32,
    );
    pub fn csmGetParameterCount(model: *const csmModel) -> ::core::ffi::c_int;
    pub fn csmGetParameterIds(model: *const csmModel) -> *mut *const ::core::ffi::c_char;
    pub fn csmGetParameterTypes(model: *const csmModel) -> *const csmParameterType;
    pub fn csmGetParameterMinimumValues(model: *const csmModel) -> *const f32;
    pub fn csmGetParameterMaximumValues(model: *const csmModel) -> *const f32;
    pub fn csmGetParameterDefaultValues(model: *const csmModel) -> *const f32;
    pub fn csmGetParameterValues(model: *mut csmModel) -> *mut f32;
    pub fn csmGetParameterRepeats(model: *const csmModel) -> *const ::core::ffi::c_int;
    pub fn csmGetParameterKeyCounts(model: *const csmModel) -> *const ::core::ffi::c_int;
    pub fn csmGetParameterKeyValues(model: *const csmModel) -> *mut *const f32;
    pub fn csmGetPartCount(model: *const csmModel) -> ::core::ffi::c_int;
    pub fn csmGetPartIds(model: *const csmModel) -> *mut *const ::core::ffi::c_char;
    pub fn csmGetPartOpacities(model: *mut csmModel) -> *mut f32;
    pub fn csmGetPartParentPartIndices(
        model: *const csmModel,
    ) -> *const ::core::ffi::c_int;
    pub fn csmGetPartOffscreenIndices(
        model: *const csmModel,
    ) -> *const ::core::ffi::c_int;
    pub fn csmGetDrawableCount(model: *const csmModel) -> ::core::ffi::c_int;
    pub fn csmGetDrawableIds(model: *const csmModel) -> *mut *const ::core::ffi::c_char;
    pub fn csmGetDrawableConstantFlags(model: *const csmModel) -> *const csmFlags;
    pub fn csmGetDrawableDynamicFlags(model: *const csmModel) -> *const csmFlags;
    pub fn csmGetDrawableBlendModes(model: *const csmModel) -> *const ::core::ffi::c_int;
    pub fn csmGetDrawableTextureIndices(
        model: *const csmModel,
    ) -> *const ::core::ffi::c_int;
    pub fn csmGetDrawableDrawOrders(model: *const csmModel) -> *const ::core::ffi::c_int;
    pub fn csmGetDrawableOpacities(model: *const csmModel) -> *const f32;
    pub fn csmGetDrawableMaskCounts(model: *const csmModel) -> *const ::core::ffi::c_int;
    pub fn csmGetDrawableMasks(model: *const csmModel) -> *mut *const ::core::ffi::c_int;
    pub fn csmGetDrawableVertexCounts(
        model: *const csmModel,
    ) -> *const ::core::ffi::c_int;
    pub fn csmGetDrawableVertexPositions(
        model: *const csmModel,
    ) -> *mut *const csmVector2;
    pub fn csmGetDrawableVertexUvs(model: *const csmModel) -> *mut *const csmVector2;
    pub fn csmGetDrawableIndexCounts(
        model: *const csmModel,
    ) -> *const ::core::ffi::c_int;
    pub fn csmGetDrawableIndices(
        model: *const csmModel,
    ) -> *mut *const ::core::ffi::c_ushort;
    pub fn csmGetDrawableMultiplyColors(model: *const csmModel) -> *const csmVector4;
    pub fn csmGetDrawableScreenColors(model: *const csmModel) -> *const csmVector4;
    pub fn csmGetDrawableParentPartIndices(
        model: *const csmModel,
    ) -> *const ::core::ffi::c_int;
    pub fn csmResetDrawableDynamicFlags(model: *mut csmModel);
    pub fn csmGetOffscreenCount(model: *const csmModel) -> ::core::ffi::c_int;
    pub fn csmGetOffscreenBlendModes(
        model: *const csmModel,
    ) -> *const ::core::ffi::c_int;
    pub fn csmGetOffscreenOpacities(model: *const csmModel) -> *const f32;
    pub fn csmGetOffscreenOwnerIndices(
        model: *const csmModel,
    ) -> *const ::core::ffi::c_int;
    pub fn csmGetOffscreenMultiplyColors(model: *const csmModel) -> *const csmVector4;
    pub fn csmGetOffscreenScreenColors(model: *const csmModel) -> *const csmVector4;
    pub fn csmGetOffscreenMaskCounts(
        model: *const csmModel,
    ) -> *const ::core::ffi::c_int;
    pub fn csmGetOffscreenMasks(
        model: *const csmModel,
    ) -> *mut *const ::core::ffi::c_int;
    pub fn csmGetOffscreenConstantFlags(model: *const csmModel) -> *const csmFlags;
}
